2011-04-26  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Dirk Schulze.

        [GTK] Flash in divs with overflow: auto is not positioned and clipped properly
        https://bugs.webkit.org/show_bug.cgi?id=57644

        Manual test: plugins/windowed-in-iframe-2.html

        * manual-tests/plugins/windowed-in-iframe-2.html: Added.
        * platform/gtk/WidgetGtk.cpp:
        (WebCore::Widget::setFrameRect): Like the Qt port, we notify the widget via frameRectsChanged.
        * plugins/PluginView.h: Added helper method to set the allocation and clip.
        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::PluginView::setNPWindowIfNeeded):Call the helper method instead of setting
        the allocation immediately. Bring this method into sync with the implementation in
        the Qt port.
        (WebCore::PluginView::updateWidgetAllocationAndClip): Added.
        (WebCore::PluginView::plugAddedCallback): Call the new helper method.

Canonical link: https://commits.webkit.org/74701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84979 268f45cc-cd09-0410-ab3c-d52691b4dbfc