Source/WebCore/platform/gtk/WidgetGtk.cpp
@@ -109,6 +109,7 @@ IntRect Widget::frameRect() const
 void Widget::setFrameRect(const IntRect& rect)
 {
     m_frame = rect;
+    frameRectsChanged();
 }
 
 void Widget::releasePlatformWidget()
